--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <div class="header">
-            <div>Header Logo</div>
+            <div class="title">Header Logo</div>
             <div class="links">
                 <div>header link one</div>
                 <div>header link two</div>
@@ -17,7 +17,15 @@
         </div>
 
         <div class="main one">
-            
+            <div class="left">
+                <div class="hero">This website is awesome</div>
+                <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
+                    contrast</div>
+                <button class="solid">Sign up</button>
+            </div>
+            <div>
+
+            </div>
         </div>
 
         <div class="main two">
@@ -44,13 +52,20 @@
         </div>
             
         <div class="main three">
-            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know
+            <div class="quote">
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know
 is that it looks nice.
+            </div>
+            <div class="caption">-Thor, God of Thunder</div>
         </div>
 
         <div class="main">
-            <div>
-
+            <div class="call">
+                <div class="left">
+                    <div class="">Call to action! It's time!</div>
+                    <div class="">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button class="inverted">Sign up</button>
             </div>
         </div>
 
