Fix most margins

--- a/index.html
+++ b/index.html
@@ -7,24 +7,25 @@
     </head>
 
     <body>
-        <div class="header">
-            <div class="title">Header Logo</div>
-            <div class="links">
-                <div>header link one</div>
-                <div>header link two</div>
-                <div>header link three</div>
-            </div>
-        </div>
 
         <div class="main one">
-            <div class="left">
-                <div class="hero">This website is awesome</div>
-                <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
-                    contrast</div>
-                <button class="solid">Sign up</button>
+            <div class="header">
+                <div class="title">Header Logo</div>
+                <div class="links">
+                    <div>header link one</div>
+                    <div>header link two</div>
+                    <div>header link three</div>
+                </div>
             </div>
             <div>
-
+                <div class="left">
+                    <div class="hero">This website is awesome</div>
+                    <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                    <button class="solid">Sign up</button>
+                </div>
+                <div>
+                    
+                </div>
             </div>
         </div>
 
@@ -53,8 +54,7 @@
             
         <div class="main three">
             <div class="quote">
-                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know
-is that it looks nice.
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
             </div>
             <div class="caption">-Thor, God of Thunder</div>
         </div>
